# C-design

./: CMakeLists.txt  README.md
StrategyPayment/: CMakeLists.txt  PaymentContext.h  PaymentData.h  PaymentError.h  PaymentLogger.cpp  PaymentLogger.h  PaymentProcessor.cpp  PaymentProcessor.h  PaymentStrategy.cpp  PaymentStrategy.h  PaymentStrategyLogger.cpp  PaymentStrategyLogger.h  main.cpp
